@@ -1,3 +1,5 @@
+* Add warehouse address on internal shipment
+
 Version 3.8.0 - 2015-11-02
 * Bug fixes (see mercurial logs for details)
 * Add drop location type
